objects/tspa__MiniDashboard_API_Details__c.object
<CustomObject>
    <description>Used to store api related information for working of invite component.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tspa__Add_Community_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/community&apos;,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Community Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>tspa__ApiSecret__c</fullName>
        <label>ApiSecret</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>tspa__Auth_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c + &apos;/api/v2/auth&apos;, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AvailableCountryCodes__c</fullName>
        <label>AvailableCountryCodes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tspa__AvailableCountryCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Available_Tags__c</fullName>
        <label>Available Tags</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Backup_Endpoint__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/accounts/backup&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backup Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ChatterImage__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChatterImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__DNS_SSO_url__c</fullName>
        <label>DNS SSO url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Data_Retention_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c + &apos;/public/accounts/assetDataRetention&apos;, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Retention Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__DeleteImagesUrl__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c+&apos;/api/v2/history/resourceDelete&apos;, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delete Images URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Delete_Recordings_URL__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c+&apos;/api/rec/delete&apos;, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delete Recordings URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__DomainStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DomainStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__EnableGeolocation_Endpoint__c</fullName>
        <description>Determines whether the account supports geolocation identification</description>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/geolocation/{action}&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoLocation Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__End_Session_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/room/end/json&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Session Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__End_Session_Redirection_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c + &apos;/public/accounts/endSessionRedirect&apos;, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Session Redirection Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Export_Endpoint__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/accounts/export&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__FaceMeet_Endpoint__c</fullName>
        <formula>IF(NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/faceMeet/{action}&apos;,&apos;&apos;)</formula>
        <label>FaceMeet Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__FeatureStatus__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/accounts/featureStatus&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FeatureStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__History_Auth_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/auth/json&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>History Auth Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__History_Pull_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/search/json&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>History Pull Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hourly_Published_Platform_Events__c</fullName>
        <label>Hourly Published Platform Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Import_Endpoint__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/accounts/import&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Last_Used_Published_Platform_Events_Time__c</fullName>
        <label>Last Used Published Platform Events Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__Magic_Marker_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{0}/magicMarker&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Magic Marker Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Remove_Community_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/community/remove&apos;,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remove  Community Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Restore_Endpoint__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/accounts/restore&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restore Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Revoke_Account_Endpoint__c</fullName>
        <formula>IF ( NOT(ISBLANK(tspa__Domain_Name__c)), &apos;https://&apos; + tspa__Domain_Name__c + &apos;-api.techsee.me/public/accounts/markAccountForRevocation&apos;, &apos;&apos;)</formula>
        <label>Revoke Account Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SSO_URL_1__c</fullName>
        <formula>IF ( NOT(ISBLANK(tspa__Domain_Name__c)), &apos;https://&apos; + tspa__Domain_Name__c + &apos;.techsee.me&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSO URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SaveCustomersEmailAddresses_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/keepCustomerEmailAddress/{action}&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Save Customers Email Addresses Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SaveCustomersPhoneNumbers_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/keepCustomerMobile/{action}&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Save Customers Phone Numbers Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SelectedCountryCode__c</fullName>
        <label>SelectedCountryCode</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Initiation_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/session/live&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Initiation Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Recording_Endpoint__c</fullName>
        <formula>tspa__apiURL__c+&apos;/public/recording&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Recording Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Report_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/reports&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Report Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Type_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/room/modes/json&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Type Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ShareFile__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/v2/public/sign&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShareFile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ShowImageVisibility_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/history/{action}&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Save Session Images Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__SmsRetry_Endpoint__c</fullName>
        <formula>tspa__apiURL__c+&apos;/public/smsDeliveryStatus/&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmsRetry  Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Store_Configuration_Endpoint__c</fullName>
        <formula>&apos; https://&apos;+  tspa__Domain_Name__c  +&apos;-api.techsee.me/public/accounts/&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Configuration Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Terms_Conditions_Endpoint__c</fullName>
        <formula>IF(NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/accounts/{accountId}/updateExternalTerms&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms &amp; Conditions Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Used_Published_Platform_Events__c</fullName>
        <label>Used Published Platform Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__UserTokenEndpoint__c</fullName>
        <formula>tspa__apiURL__c+&apos;/public/auth&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserTokenEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__VJBaseUrl__c</fullName>
        <label>VJ Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__VideoBackgroundImage__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/v2/public/videoBackgroundImage&apos;, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Video Background Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Visual_Journey_Session_Type_Endpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/vj/&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visual Journey Session Type Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__X3_Way_session_Endpoint__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/observerInvitation&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Way session Endpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__acsURL__c</fullName>
        <label>acsURL</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__apiURL__c</fullName>
        <description>apiURL received from techsee end after user activation.</description>
        <label>apiURL</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__cloudFrontImageBaseUrl__c</fullName>
        <label>Cloud Front Image Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__createUserEndpoint__c</fullName>
        <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&apos;/public/users&apos;,
&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>createUserEndpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__desktopShowUrl__c</fullName>
        <label>Desktop Show Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__endSessionRedirectionUrl__c</fullName>
        <label>End Session Redirection Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__imageBaseUrl__c</fullName>
        <label>Image Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__packageUpgrade__c</fullName>
        <formula>tspa__apiURL__c +&apos;/public/accounts/packageUpgrade&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>packageUpgrade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__recordingBaseUrl__c</fullName>
        <label>Recording Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__statsApiUrl__c</fullName>
        <label>Stats API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__userCreatedInTechSee__c</fullName>
        <label>userCreatedInTechSee</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant - API Details</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Mini-{0000}</displayFormat>
        <label>MiniDashboard API Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant - API Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>